# ollama-ai-agents-playground

./: .gitignore  ARCHITECTURE.md  BLOCKERS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  DEV_NOTES.md  README.md  calendar.json  config.toml  contacts.json  implement.md  personal-assistant.md  powershell_cache_script_permanent.ps1
.claude/: settings.local.json
.claude/commands/: continue-session.md  save-session-cache.md
.claude/scripts/: read_cache.rs  save_cache.rs
.claude/skills/agent-design/: SKILL.md
.claude/skills/architecture/: SKILL.md
.claude/skills/conventions/: SKILL.md
.claude/skills/documentation/: SKILL.md
.claude/skills/implementation/: SKILL.md
.claude/skills/testing/: SKILL.md
.github/workflow/: build.yml
examples/: check_assistant.rs  classify_intent.rs
ollama-lib/: Cargo.toml  README.md
ollama-lib/src/: lib.rs
ollamars/: Cargo.toml  config.toml
ollamars/src/: config.rs  from_markdown_json.rs  lib.rs  mod.rs  ollama_chat.rs  ollama_chat_request.rs  ollama_check_request.rs  ollama_client.rs  ollama_intent_response_content.rs  ollama_options.rs  ollama_response.rs  ollama_response_message.rs  role.rs
ollamars/src/http/: http_client.rs
ollamars/src/model/: mod.rs
ollamars/src/model/create/: mod.rs  ollama_create_request.rs
ollamars/src/model/load/: mod.rs  ollama_load_request.rs  ollama_load_result.rs
spec/: COMPLEX_SYSTEM_PROMPTS_EXAMPLES.md  PERSONAL_ASSISTANT_EXAMPLE.md  personal-assistant.md
src/: config.rs  lib.rs  main.rs
src/agent/: action.rs  agent.rs  agent_prompt.rs  agent_result.rs  intent.rs  mod.rs
src/agent/assistant/: create_assistant_agent.rs  create_result.rs  mod.rs
src/agent/classifier/: classification_result.rs  classifier_agent.rs  classifier_promp.rs  intent_classifier_agent.rs  mod.rs  params.rs  response_mapper.rs
src/agent/contact/: contact_agent.rs  contact_result.rs  mod.rs
src/agent/email/: email_agent.rs  email_result.rs  mod.rs
src/agents/: agent.rs  agent_error.rs  agent_param.rs  agent_prompt.rs  agent_prompt_builder.rs  intent.rs  mod.rs
src/agents/assistant/: assistant_name.rs  check_assistant_agent.rs  check_param.rs  check_result.rs  create_assistant_agent.rs  create_param.rs  create_result.rs  load_assistant_agent.rs  load_result.rs  mod.rs
src/agents/classifier/: classification_result.rs  from_markdown_json.rs  intent_classifier_agent.rs  intent_param.rs  mapper.rs  mapper_error.rs  mod.rs  ollama_intent_response_parser.rs  ollama_to_classification_mapper.rs  params.rs  response_mapper.rs  to_classification_result.rs
src/agents/contact/: contact_agent.rs  contact_result.rs
src/agents/email/: email_agent.rs  email_result.rs  mod.rs
src/assistant/: mod.rs
src/infra/: assistant_ollama_client.rs  mod.rs
src/infra/contacts/: mod.rs
src/infra/email/: mod.rs
src/infra/http/: mod.rs  (+2 more)
tests/: assistant_tests.rs  classifier_tests.rs
workflow-lib/: Cargo.toml  README.md
workflow-lib/src/: lib.rs
workflowrs/: ARCHITECTURE.md  BLOCKERS.md  Cargo.toml
workflowrs/src/: error.rs  lib.rs
(+18 files in other folders)
