[package]
name = "ollama-ai-agents-playground"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
toml = "0.9.5"
reqwest = { version = "0.12.23", features = ["blocking", "json", "cookies"] }
tokio = { version = "1.47.1", features = ["full"] }
once_cell = "1.19"
markdown-harvest = "0.1.4"