[workspace]
members = [".", "ollamars", "workflowrs"]
resolver = "2"

[package]
name = "ollama-ai-agents-playground"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0.144"
toml = "0.9.5"
once_cell = "1.19"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
once_cell = { workspace = true }
toml = { workspace = true }
tokio = { version = "1.47.1", features = ["full"] }
markdown-harvest = "0.1.5"
ollamars = { path = "ollamars" }
workflowrs = { path = "workflowrs" }
