[workspace]
members = [".", "workflowrs"]
resolver = "2"

[package]
name = "ollama-ai-agents-playground"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
once_cell = "1.19"
toml = "0.9.8"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
once_cell = { workspace = true }
toml = { workspace = true }
tokio = { version = "1.47.1", features = ["full"] }
markdown-harvest = "0.1.6"
workflowrs = { path = "workflowrs" }
ollama-oxide = {version = "0.1.1", features = ["model"]}
