[package]
name = "ollamars"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
once_cell = { workspace = true }
reqwest = { version = "0.12.23", features = ["blocking", "json", "cookies"] }
