[package]
name = "workflow-lib"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust library for workflow management and automation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/workflow-lib"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"